--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
     "prettier": "prettier --config ./.prettierrc --write \"src/{app,environments}/**/*{.ts,.html,.scss,.json}\"",
     "prettier:verify": "prettier --config ./.prettierrc --check \"src/{app,environments}/**/*{.ts,.html,.scss,.json}\"",
     "prettier:staged": "pretty-quick --staged",
-    "lint": "ng lint"
+    "lint": "eslint ./src"
   },
   "private": true,
   "dependencies": {
@@ -32,8 +32,8 @@
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "@ngneat/helipopper": "^8.0.3",
     "@jsverse/transloco": "^7.0.0",
+    "@ngneat/helipopper": "^8.0.3",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/typography": "^0.5.4",
@@ -58,10 +58,11 @@
     "@eslint/js": "^9.18.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^20.4.8",
+    "angular-eslint": "20.2.0",
     "autoprefixer": "^10.4.7",
     "concurrently": "^9.1.2",
     "cypress": "^13.2.0",
-    "eslint": "^9.18.0",
+    "eslint": "^9.33.0",
     "jasmine-core": "~3.10.0",
     "json-server": "^0.17.3",
     "karma": "~6.3.0",
@@ -75,6 +76,6 @@
     "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^3.1.6",
     "typescript": "~5.1.6",
-    "typescript-eslint": "^8.20.0"
+    "typescript-eslint": "8.40.0"
   }
 }
