feat: add liqo instance info page

--- a/deployments/liqo-dashboard/templates/backend-deployment.yaml
+++ b/deployments/liqo-dashboard/templates/backend-deployment.yaml
@@ -47,6 +47,8 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - containerPort: {{ .Values.backend.service.port }}
+          args:
+            - "--liqo-namespace={{ .Values.liqo.namespace }}"
           resources:
           {{ toYaml .Values.backend.resources | indent 12 }}
           securityContext:
