--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,17 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
+    - name: Set architectures
+      id: set-architectures
+      run: |
+        ARCHITECTURES='linux/amd64,linux/arm64'
+        echo "ARCHITECTURES=${ARCHITECTURES}" >> $GITHUB_ENV
+
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3.4.0
+      with:
+        platforms: all
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
@@ -57,6 +68,7 @@ jobs:
       uses: docker/build-push-action@v6
       with:
         context: ./${{ matrix.component }}
+        platforms: ${{ env.ARCHITECTURES }}
         file: ./${{ matrix.component }}/Dockerfile
         push: true
         labels: ${{ steps.meta.outputs.labels }}
